--- a/cssvar.html
+++ b/cssvar.html
@@ -101,7 +101,7 @@
         }
 
         inputs.forEach(input => input.addEventListener("change",handler));
-        inputs.forEach(input => input.addEventListener("mousemove",handler));
+        // inputs.forEach(input => input.addEventListener("mousemove",handler));
 
     </script>
 
