--- a/debitCard.html
+++ b/debitCard.html
@@ -62,8 +62,8 @@
           rgba(255, 255, 255, 0.4) 0%,
           rgba(255, 255, 255, 0) 100%
         );
-        border-top: 0.2px solid #eeeded;
-        border-left: 0.2px solid #eeeded;
+        border-top: 0.2px solid rgba(225, 255, 255, 0.3);
+        border-left: 0.2px solid rgba(225, 255, 255, 0.3);
         border-radius: 20px;
         backdrop-filter: blur(30px);
         box-shadow: 0 15px 25px rgba(0, 0, 0, 0.3);
