--- a/debitCard.html
+++ b/debitCard.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./glass-card-img/vanilla-tilt.js" />
     <style>
       @font-face {
         font-family: "ocr";
@@ -146,7 +147,7 @@
     </style>
   </head>
   <body>
-    <div class="card">
+    <div class="card data-tilt">
       <h3 class="bank">Bank</h3>
       <img src="./debit_card/chip.png" alt="chip" class="chip" />
       <img src="./debit_card/indi.png" alt="indigator" class="indi" />
