--- a/weatherui.html
+++ b/weatherui.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Glassy Weather card</title>
+    <link rel="stylesheet" href="./glass-card-img/vanilla-tilt.js" />
     <style>
       * {
         padding: 0;
@@ -78,7 +79,7 @@
     </style>
   </head>
   <body>
-    <div class="card">
+    <div class="card" data-tilt>
       <h4>SURAJGARH</h4>
       <h6>PARTLY CLOUDY</h6>
       <img src="./Weather_Card_UI/icon.png" alt="icon" />
