--- a/debitCard.html
+++ b/debitCard.html
@@ -147,7 +147,7 @@
     </style>
   </head>
   <body>
-    <div class="card data-tilt">
+    <div class="card" data-tilt>
       <h3 class="bank">Bank</h3>
       <img src="./debit_card/chip.png" alt="chip" class="chip" />
       <img src="./debit_card/indi.png" alt="indigator" class="indi" />
