--- a/weatherui.html
+++ b/weatherui.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Glassy Weather card</title>
-    <link rel="stylesheet" href="./glass-card-img/vanilla-tilt.js" />
     <style>
       * {
         padding: 0;
@@ -108,5 +107,6 @@
         AADIL MUGAL <span style="color: #ee5015">🎔</span>
       </p>
     </div>
+    <script src="./glass-card-img/vanilla-tilt.js"></script>
   </body>
 </html>
