--- a/debitCard.html
+++ b/debitCard.html
@@ -11,7 +11,6 @@
       href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./glass-card-img/vanilla-tilt.js" />
     <style>
       @font-face {
         font-family: "ocr";
@@ -157,6 +156,6 @@
       <img src="./debit_card/visa.png" alt="logo-visa" class="logo" />
     </div>
 
-    <script></script>
+    <script src="./glass-card-img/vanilla-tilt.js"></script>
   </body>
 </html>
