--- a/glasssite1.html
+++ b/glasssite1.html
@@ -345,7 +345,7 @@
       <div class="games">
         <div class="status">
           <h1>Recent games</h1>
-          <input type="text" />
+          <input type="text" placeholder="Search games"/>
         </div>
         <div class="cards">
           <div class="card">
