--- a/translator.html
+++ b/translator.html
@@ -18,7 +18,7 @@
   </head>
 
   <body>
-    <div class="container" data-tilt>
+    <div class="container">
       <div class="windowbtn">
         <div class="w1"></div>
         <div class="w2"></div>
@@ -76,6 +76,5 @@
     <div class="c2"></div>
     <script src="./languageTranslator/countries.js"></script>
     <script src="./languageTranslator/script.js"></script>
-    <script src="./glass-card-img/vanilla-tilt.js"></script>
   </body>
 </html>
