--- a/loginhue.html
+++ b/loginhue.html
@@ -121,6 +121,12 @@
         margin: 5px;
         letter-spacing: 1px;
       }
+
+      @media (max-width: 400px) {
+        .box {
+          margin: 10px;
+        }
+      }
     </style>
   </head>
   <body>
